--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "3.1.x",
+    "gulp-svgmin": "^1.2.4",
     "gulp-svgstore": "^6.1.1",
     "posthtml-include": "^1.1.0",
     "run-sequence": "^2.2.1",
