Minify images and add .webp versions

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "2.23.x",
     "del": "^3.0.0",
     "gulp": "3.9.x",
+    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
     "gulp-posthtml": "^3.0.4",
@@ -16,6 +17,7 @@
     "gulp-sass": "3.1.x",
     "gulp-svgmin": "^1.2.4",
     "gulp-svgstore": "^6.1.1",
+    "gulp-webp": "^3.0.0",
     "posthtml-include": "^1.1.0",
     "run-sequence": "^2.2.1",
     "stylelint": "8.4.x",
