--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "browser-sync": "2.23.x",
     "del": "^3.0.0",
     "gulp": "3.9.x",
+    "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
@@ -17,6 +19,7 @@
     "gulp-sass": "3.1.x",
     "gulp-svgmin": "^1.2.4",
     "gulp-svgstore": "^6.1.1",
+    "gulp-uglify": "^3.0.0",
     "gulp-webp": "^3.0.0",
     "posthtml-include": "^1.1.0",
     "run-sequence": "^2.2.1",
